Virtual and Override

--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/BattleGround.BattleGround
+EditorStartupMap=/Game/Levels/MainMenu.MainMenu
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -18,7 +18,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/BattleGround.BattleGround
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/BattleTankGameMode_BP.BattleTankGameMode_BP_C
 GlobalDefaultServerGameMode=None
